unpackaged/main/default/objects/Chatbot_Student__c/Chatbot_Student__c.object-meta.xml
<CustomObject>
    <label>Chatbot Student</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Student Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Chatbot Students</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>