unpackaged/main/default/objects/Chatbot_Student__c/fields/ETST_Child_count__c.field-meta.xml
<CustomField>
    <fullName>ETST_Child_count__c</fullName>
    <label>Child count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>