unpackaged/main/default/objects/Chatbot_Student__c/fields/ETST_Full_Name_AR__c.field-meta.xml
<CustomField>
    <fullName>ETST_Full_Name_AR__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Full_Name_AR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>