unpackaged/main/default/objects/Chatbot_Student__c/fields/ETST_Latitude__c.field-meta.xml
<CustomField>
    <fullName>ETST_Latitude__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Latitude</label>
    <length>255</length>
    <type>Text</type>
</CustomField>