unpackaged/main/default/objects/Chatbot_Student__c/fields/ETST_ParentEID__c.field-meta.xml
<CustomField>
    <fullName>ETST_ParentEID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ParentEID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>